fixed alignment issue on footer and header, added carousel and club description

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,27 +4,17 @@ font-family: 'Lobster', cursive;
 font-family: 'Nunito', sans-serif; */
 
 /*-------------------- Header --*/
-
-header {
-    margin: 0;
-    background: url("../assets/images/GXBC Clubhouse.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-
-}
-
 .heading {
-    padding: 15px;
+    padding: 5px 20px 5px 30px;
 }
 
 .gxbc-logo {
     max-height: 100px;
-    margin: 0px 5px;
+    max-width: 100px;
     margin-left: 20px;
     margin-right:20px;
+    padding-left: 5px 20px;
+    padding-right: 5px 20px;
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
@@ -34,8 +24,7 @@ header {
 .title-header {
     font-family: 'Nunito', sans-serif;   
     font-weight: 100;
-    font-size: 46px;
-    margin-bottom: 5px;
+    font-size: 70px;
     color: #a5e6f5;
     background-color: #030233;
     text-shadow: 3px 2px #ad850d;
@@ -54,7 +43,8 @@ header {
     height: 75px;
     width: 150px;
     text-align: center;
-    padding: 0;
+    padding: 0px;
+    margin: 1px;
 }
 
 .menuitem a {
@@ -63,10 +53,12 @@ header {
     color:#ad850d;
     text-shadow: 0px 1px #a5e6f5;
     height: 75px;
+    margin: 0px;
+    padding: 0px;
 }
 
 .menuitem a i {
-    padding-top:15px;
+    padding-top: 5px;
     display: block inline;
     color: #ad850d;
     font-size: 18px;
@@ -76,6 +68,7 @@ header {
     display: inline-block;
     width: 100%;
     padding-top: 1px;
+    padding-bottom: 0px;
     text-align: center;
     font-size: 14px;
     font-weight: 300;
@@ -84,9 +77,9 @@ header {
 }
 
 .list-inline {
-    padding-left: 20px;
+    padding-left: 175px;
     list-style: none;
-}
+} /*moves the menubar location*/
 
 .list-inline-item:not(:last-child) {
     margin: 0;
@@ -94,17 +87,50 @@ header {
 
 /*----------------------Main Body---*/
 
+.carousel {
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-top: 0;
+}
+.carousel-inner {
+    max-height: 20%;
+}
 
+.carousel-item {
+    height:30rem;
+}
 
+.carousel-item > img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  height: 40rem;
+  margin: 0 auto;
+}
 
+.club-summary {
+    font-family: 'Nunito', sans-serif;
+    font-weight: bold;
+    color:#030233;
+    background-color:#a5e6f5;
+    padding: 0;
+    margin: 0;
+}
 
+.club-summary h2 {
+    font-size: 30px;
+}
 
-/*------------------------Footer --*/
+.club-summary h3 {
+    font-size: 25px;
+}
+
+/*-----------------------------------Footer --*/
 footer {
     background-color:#030233;
     color:#ad850d;
-    align-content: center;
-    
 }
 
 .footer {
@@ -115,7 +141,7 @@ footer {
 h4 {
     font-size: 20px;
     text-align: center;
-    margin 5px 15px
+    margin: 5px 15px;
     font-weight: bolder;
 }
 
@@ -125,35 +151,46 @@ h6 {
 }
 
 .footer-sponsor {
-    list-style-type: none;
-    text-align: center;
-    padding-left: 30px;
-    padding-right:30px;
+    text-align: left;
+    display: inline-block;
+    padding-left: 35px;
+    padding-right:35px;
+    column-count: 1;
 }
 
 .footer-affiliation {
-    list-style: none;
-    text-align: center;
-    padding-left: 30px;
-    padding-right: 30px;
+    text-align: left;
+    display: inline-block;
+    padding-left: 35px;
+    padding-right: 35px;
+    column-count: 1;
 }
 
 .footer-contact {
     text-align: center;
-    padding-left: 30px;
-    padding-right:30px; 
+    display: inline-block;
+    padding-left: 35px;
+    padding-right:35px; 
+    column-count: 2;
 }
+
+.footer-contact-two {
+    text-align: center;
+    padding-top: 35px;
+    padding-left: 35px;
+    padding-right:35px; 
+    column-count: 1;
+}
+
 
 .footer-sponsor img {
     max-height: 50px;
     max-width: 50px;
-    align-content: center;
 }
 
 .footer-affiliation img{
     max-height: 50px;
     max-width: 50px;
-    align-content: center;
     margin: 5px 5px;
 }
 
@@ -164,7 +201,7 @@ h6 {
     font-size: 15px;
 }
 #footer-container {
-    padding-left: 90px;
+    padding-left: 75px;
 }
 #footer-columns p {
     font-size: 15px;
